--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CPSC411Project">
-        <activity android:name=".MainMenu"></activity>
+        <activity android:name=".Reports"></activity>
+        <activity android:name=".SalesHistory" />
+        <activity android:name=".Inventory" />
+        <activity android:name=".MakeTransaction" />
+        <activity android:name=".MainMenu" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
