--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <activity android:name=".Inventory" />
         <activity android:name=".InventoryMenu" />
         <activity android:name=".InventoryAddItem" />
+        <activity android:name=".InventoryEditItem" />
+        <activity android:name=".InventoryClear" />
         <activity android:name=".MakeTransaction" />
         <activity android:name=".MainMenu" />
         <activity android:name=".MainActivity">
