--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".RegisterUser" />
         <activity android:name=".Reports" />
         <activity android:name=".SalesHistory" />
+        <activity android:name=".SalesHistoryClear" />
         <activity android:name=".Inventory" />
         <activity android:name=".InventoryMenu" />
         <activity android:name=".InventoryAddItem" />
